src/test/deca/context/invalid/sansObj/or-binaire-string.deca
// Description:
//          Utilisation de l'opérateur || avec un string et un bool
//
// Résultat:
//Le terme de droite n'est pas un booléen
//
{
    boolean a = false;
    boolean b = (a || "no-booléen");
}